--- a/orchidsServer/views/categories.ejs
+++ b/orchidsServer/views/categories.ejs
@@ -14,9 +14,9 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-                <img src="https://i.pinimg.com/originals/98/e9/ec/98e9ec2eef96f82d6080d985e1adb524.jpg"
-                    width="100" height="50">
+            <a class="navbar-item" href="/">
+                <img src="https://i.pinimg.com/originals/98/e9/ec/98e9ec2eef96f82d6080d985e1adb524.jpg" width="100"
+                    height="50">
                 <h1 style="font-size: xx-large; padding-left: 10px; color: red;">CATEGORY</h1>
             </a>
 
@@ -100,8 +100,7 @@
                         <div class="field-body">
                             <div class="field">
                                 <div class="control">
-                                    <input class="input is-info" name="description" type="text"
-                                        placeholder="....">
+                                    <input class="input is-info" name="description" type="text" placeholder="....">
                                 </div>
                             </div>
                         </div>
