--- a/orchidsServer/views/orchids.ejs
+++ b/orchidsServer/views/orchids.ejs
@@ -14,9 +14,9 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-                <img src="https://i.pinimg.com/originals/98/e9/ec/98e9ec2eef96f82d6080d985e1adb524.jpg"
-                    width="100" height="50">
+            <a class="navbar-item" href="/">
+                <img src="https://i.pinimg.com/originals/98/e9/ec/98e9ec2eef96f82d6080d985e1adb524.jpg" width="100"
+                    height="50">
                 <h1 style="font-size: xx-large; padding-left: 10px; color: red;">ORCHID</h1>
 
             </a>
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
                             <label class="label">Color</label>
@@ -208,7 +208,8 @@
                         <div class="field-body">
                             <div class="field">
                                 <div class="control">
-                                    <button class="button is-primary" type="submit" style="margin-left: 400px; color: brown; ">
+                                    <button class="button is-primary" type="submit"
+                                        style="margin-left: 400px; color: brown; ">
                                         Create
                                     </button>
                                 </div>
